--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,10 +5,9 @@
     <body>
         <h1>Your To-Do List</h1>
         <form method="POST">
-            <input id="id_new_item" placeholder="Enter a to-do item"/>
+            <input name='item_text' id="id_new_item" placeholder="Enter a to-do item"/>
             {% csrf_token %}
         </form>
-
         <table id="id_list_table">
             <tr><td>{{ new_item_text }}</td></tr>
         </table>
